# fs_cli-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.debian  Makefile  README.md  build.sh  fs_cli.yaml
.claude/commands/: release.md
.github/workflows/: build.yml
DEBIAN/: control
hooks/: install.sh  pre-commit
src/: args.rs  channel_info.rs  commands.rs  completion.rs  config.rs  console_complete.rs  esl_debug.rs  log_display.rs  main.rs  printer.rs  readline.rs  session.rs
