[package]
name = "fs_cli-rs"
version = "1.1.2"
edition = "2021"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "Interactive FreeSWITCH CLI client using ESL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ticpu/fs_cli-rs"
readme = "README.md"
keywords = ["freeswitch", "esl", "cli", "telephony", "voip"]
categories = ["command-line-utilities"]

[[bin]]
name = "fs_cli"
path = "src/main.rs"

[dependencies]
freeswitch-esl-tokio = "1.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
rustyline = { git = "https://github.com/ticpu/rustyline.git", branch = "eventhandler-macro" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
crossterm = "0.27"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
gethostname = "0.5"
