[package]
name = "fs_cli-rs"
version = "1.3.6"
edition = "2021"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "Interactive FreeSWITCH CLI client using ESL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ticpu/fs_cli-rs"
readme = "README.md"
keywords = ["freeswitch", "esl", "cli", "telephony", "voip"]
categories = ["command-line-utilities"]

[[bin]]
name = "fs_cli"
path = "src/main.rs"

[dependencies]
freeswitch-esl-tokio = "2.2"
freeswitch-types = "1.2"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
rustyline = { git = "https://github.com/ticpu/rustyline.git", branch = "eventhandler-macro" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
crossterm = "0.29"
libc = "0.2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
gethostname = "1"
